new file:   htdocs/index.html 	modified:   htdocs/index.php

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGRO-CETEP</title>
 </head>
-<body>
-    <?php
-        echo '<h1 style="text-align: center">Hello Word</h1>';
-    ?>
+<body>    
+    <h1 style="text-align: center">Hello Word</h1>    
 </body>
 </html>
 <?php
