--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -25,7 +25,7 @@
         <div class="row" style="margin-block-end: 50px">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
-                <div class="container mt-5 text-white">
+                <div class="text-white">
                     <form action="index.php" method="post">
                       <div class="mb-3 mt-3">
                           <label for="email">Email:</label>
