--- a/htdocs/cadastro.html
+++ b/htdocs/cadastro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>AGROCETEP - Login</title>
+        <title>AGROCETEP - Cadastro</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,17 +31,27 @@
             <div class="col-sm-12">
                 <div class="text-white">
                     <form action="index.php" method="post">
-                      <div class="mt-3">
+                        <div class="mt-3">
+                            <label for="nome">Nome:</label>
+                            <input type="nome" class="form-control" id="nome" placeholder="Nome" name="nome">
+                        </div>
+                        <div class="mt-3">
+                            <label for="nome">Lattes ID:</label>
+                            <input type="lattes" class="form-control" id="lattes" placeholder="Link do Lattes" name="lattes">
+                        </div>
+                        <div class="mb-3 mt-3">
                           <label for="email">Email:</label>
                           <input type="email" class="form-control" id="email" placeholder="Email" name="email">
                         </div>
                         <div class="mb-3">
                           <label for="pwd">Senha:</label>
                           <input type="password" class="form-control" id="pwd" placeholder="Senha" name="pswd">
-                        </div>                        
-                        <button type="submit" class="btn btn-dark" style="
-    width: 100%;
-">Entrar</button>
+                        </div>
+                        <div class="mb-3">
+                            <label for="pwd">Confirmar Senha:</label>
+                            <input type="cpassword" class="form-control" id="cpwd" placeholder="Confirme a senha" name="cpswd">
+                          </div>                        
+                        <button type="submit" class="btn btn-dark" style="width: 100%;">Cadastrar</button>
                     </form>
                   </div>
             </div>            
