--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,14 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        
       </head>
       <body style="background-image: url('https://images4.alphacoders.com/242/242534.jpg');">
         <header class="container-fluid p-5 bg-secondary text-white">
             <div class="row">
-                <div class="col-sm-5 text-center">
-                    <img src="/Logo AgroCETEP.png" class="rounded-circle" alt="" style="width: 50%;">
+                <div class="col-sm-3 text-center">
+                    <img src="/Logo AgroCETEP.png" class="rounded-circle" alt="" style="width: 50%; margin-block: 20%;">
                 </div>
-                <div class="col-md-7 text-center">
+                <div class="col-md-9 text-center">
                     <div style="margin-block: 10%;">
                         <h1>AGROCETEP</h1>
                         <h5>Catálogo online</h5> 
