modified:   htdocs/index.html

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -9,7 +9,7 @@
         
       </head>
       <body style="background-image: url('https://images4.alphacoders.com/242/242534.jpg');">
-        <header class="container-fluid p-5 bg-secondary text-white">
+        <header class="container-fluid  bg-secondary text-white">
             <div class="row">
                 <div class="col-sm-3 text-center">
                     <img src="/Logo AgroCETEP.png" class="rounded-circle" alt="" style="width: 50%; margin-block: 20%;">
